Various changes trying to fix the scroll issues on iOS

--- a/covid-19-support/src/scss/Main.scss
+++ b/covid-19-support/src/scss/Main.scss
@@ -2,6 +2,7 @@ html,
 body,
 #wrapper {
   height: 100%;
+  overflow: hidden;
 }
 
 h1,
